HistoryList/Detail (Height matches amount of text, in addition fixed bug where text would overflow). Limit history to 20

--- a/electronDND/src/assets/css/history_detail.css
+++ b/electronDND/src/assets/css/history_detail.css
@@ -15,5 +15,13 @@
 }
 
 .listHeight {
-  height: 40px;
+  min-height: 40px;
+  height: 100%;
+}
+
+.descriptionLbl {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  max-height: 100%;
 }
